--- a/latex/wifi.tex
+++ b/latex/wifi.tex
@@ -28,9 +28,9 @@
 \large
 \centering
 \label{my-label}
-\begin{tabular}{|p{0.25\linewidth}|p{0.3\linewidth}|p{0.22\linewidth}|p{0.135\linewidth}|}
+\begin{tabular}{|p{0.25\linewidth}|p{0.45\linewidth}|p{0.25\linewidth}|}
 \hline
-MAC-адрес & ФИО & Телефон & Подпись *  \\
+MAC-адрес & ФИО & Подпись *  \\
 \hline
 {{.Table}}
 \end{tabular}
