--- a/templates/latex/wifi.tex
+++ b/templates/latex/wifi.tex
@@ -18,7 +18,7 @@
 \end{center}
 \begin{flushleft}
 \large
-Прошу предоставить доступ по технологии Wi-Fi к ИКС СГУ для следующих устройств:
+Прошу предоставить подключение к ИКС СГУ по технологии Wi-fi для доступа к образовательным ресурсам университета и сети Интернет следующим устройствам:
 \end{flushleft}
 
 
