Improved latex template

--- a/templates/latex/wifi.tex
+++ b/templates/latex/wifi.tex
@@ -18,7 +18,7 @@
 \end{center}
 \begin{flushleft}
 \large
-Прошу предоставить подключение к ИКС СГУ по технологии Wi-fi для доступа к образовательным ресурсам университета и сети Интернет следующим устройствам:
+Прошу предоставить подключение к ИКС СГУ по технологии Wi-Fi для доступа к образовательным ресурсам университета и сети Интернет следующим устройствам:
 \end{flushleft}
 
 
@@ -38,8 +38,7 @@ MAC-адрес & ФИО & Телефон & Подпись *  \\
 
 
 \small
-* С правилами предоставления доступа к сети Интернет ознакомлен и несу ответственность за свои действия в соответствии с положением об ИКС и уставом СГУ. \\[30pt]
-
+* С правилами предоставления доступа к сети Интернет ознакомлен и несу ответственность за свои действия в соответствии с положением об ИКС СГУ. \\[30pt]
 \normalsize
 \begin{flushleft}
 \large
