--- a/templates/latex/domain.tex
+++ b/templates/latex/domain.tex
@@ -14,11 +14,11 @@
 
 \begin{center}
 \large
-\textbf{Служебная записка № {{.MemorandumId}} } \\[20pt]
+\textbf{Служебная записка № DN-{{.MemorandumId}} } \\[20pt]
 \end{center}
 \begin{flushleft}
 \large
-Прошу предоставить подключение к ИКС СГУ по технологии Wi-Fi для доступа к образовательным ресурсам университета и сети Интернет следующим устройствам:
+Прошу зарегистрировать в доменной зоне sgu.ru домены (3-го уровня) с целью: {{.Target}} для: {{.Department}} со следующими предполагаемыми именами:
 \end{flushleft}
 
 
@@ -28,9 +28,9 @@
 \large
 \centering
 \label{my-label}
-\begin{tabular}{|p{0.25\linewidth}|p{0.3\linewidth}|p{0.22\linewidth}|p{0.135\linewidth}|}
+\begin{tabular}{|p{0.20\linewidth}|p{0.20\linewidth}|p{0.25\linewidth}|p{0.25\linewidth}|}
 \hline
-MAC-адрес & ФИО & Телефон & Подпись *  \\
+Имя домена & Хостинг & ФИО & Учётные записи \\
 \hline
 {{.Table}}
 \end{tabular}
@@ -44,6 +44,23 @@ MAC-адрес & ФИО & Телефон & Подпись *  \\
 \large
 Руководитель подразделения:\\~\\
 \end{flushleft}
+\centering
+\noindent\rule{550pt}{0.4pt}
+\large
+Должность, ФИО, Подпись\\[50pt]
+
+\begin{flushright}
+\normalsize
+\noindent\rule{100pt}{0.4pt} \\
+Дата           
+\end{flushright}
+
+\begin{flushleft}
+Выделить домены в доменной зоне sgu.ru разрешаю
+\end{flushleft}
+ 
+\\
+
 \centering
 \noindent\rule{550pt}{0.4pt}
 \large
